# omniedge-routeiq

./: .gitignore  AGENTS.md  README.md  audit_closed_issues.sh  final-routeiq-optimize.sh  package-lock.json  routeiq-core-review.txt  routeiq-v13-one-shot.sh  routeiq-v13-source.tgz  routeiq-v14-one-shot.sh  routeiq-v15-refine.sh  routeiq-v16-publish-actions.sh  routeiq-v16-safe-hybrid.sh  routeiq-v17-build-publish.sh  routeiq-v171-core-review.txt  routeiq-v171-runtime-safe.sh  routeiq-v172-compact-hybrid.sh  routeiq-v18-zero-token-audit.sh  routeiq-v181-single-pass-publish.sh  routeiq-zero-flow-lab-v2.sh  routeiq-zero-flow-lab.sh  update-routeiq-readmes.sh
.routeiq-audit/: issue-audit-report.csv  issue-audit-report.md  issues.json
.routeiq-zero-flow-lab-20260712-145720/: consolidated-report.json  routeiq-zero-flow-summary.txt
audit/: closed-issues-list.json  closed-issues-report.md  issue-5.json  issue-6.json  rameen-issues-5-6-review.md
backend/: .env.example  .gitignore  Dockerfile  README_BACKEND.md  pyproject.toml  render.yaml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: dependencies.py  routes.py
backend/app/core/: config.py  logging.py
backend/app/models/: audit.py  enums.py  metrics.py  route.py  status.py
backend/app/providers/: base.py  cloud_fireworks.py  local_ollama.py  mock_cloud.py  registry.py
backend/app/services/: audit_store.py  classifier.py  decision_engine.py  metrics_store.py  router_service.py  simulation.py
backend/app/utils/: tokens.py
backend/tests/: test_route.py
docs/: API_Contract.md  README.md  (+5 more)
(+177 files in other folders)
